# athu-music-d

./: CHANGELOG.md  HANDOVER.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  database.rs  lib.rs  lyrics.rs  main.rs  metadata.rs  mpris_smtc.rs  scanner.rs  thumbnail_cache.rs
src-tauri/src/apis/: deezer.rs  lastfm.rs  mod.rs  theaudiodb.rs
src/components/: CoverArtImage.tsx  ErrorBoundary.tsx  LibrarySort.tsx
src/components/layout/: BottomBar.tsx  HeaderBar.tsx  NavRail.tsx  Sidebar.tsx
src/hooks/: useSort.ts
src/lib/: ThemeContext.tsx  metadata.ts  metadataWaterfall.ts  tauri.ts
src/lib/utils/: sorting.ts
src/theme/: index.ts
src/types/: library.ts
src/views/: AlbumDetails.tsx  Albums.tsx  ArtistDetails.tsx  Artists.tsx  LyricsEditor.tsx  NowPlaying.tsx  Playlists.tsx  Queue.tsx  Settings.tsx  Tracks.tsx
