[package]
name = "athu-music-d"
version = "0.3.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "athu_music_d_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
rodio = "0.22.2"
lofty = "0.24.0"
lazy_static = "1.5.0"
walkdir = "2.5.0"
base64 = "0.22.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
id3 = "1"
metaflac = "0.2"
mp4ameta = "0.13"
lewton = "0.10"
ogg_metadata = "0.4"
urlencoding = "2.1.3"
souvlaki = "0.7.3"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2"
image = "0.25.10"
sha2 = "0.11.0"
tokio = { version = "1.52.1", features = ["full"] }

